--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body{
     text-align:center;
     font-size:34px;
     padding-top:4px;
-    background-color:green;
+    background-color:rgb(23, 0, 128);
     color:white;
 }
 #clr{
